# testflame

./: Cargo.toml  README.md  flame-graph.html
myothercrate/: Cargo.toml
myothercrate/src/: lib.rs
src/: lib.rs  main.rs
