[package]
name = "testflame"
version = "0.1.0"
authors = ["sharks"]

[workspace]
members = [
    "myothercrate"
]

[dependencies]
myothercrate = {path = "./myothercrate", version = "0.1.0"}
flame = {version = "0.2.2", optional = true}
flamer = {version = "^0.2.1", optional = true}

[features]
default = []
flame_it = ["flame", "flamer", "myothercrate/flame_it"]

